--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
     <section id="nilou-artworks">
       <div class="coming-soon d-flex justify-content-center align-items-center" style="height: 100vh; font-size: 45px;">
-        <p class="text-white">Coming Soon...</p>
+<!--         <p class="text-white">Coming Soon...</p> -->
       </div>
     </section>
 
